force-app/main/default/objects/Exhibition_Customer_Visit__c/Exhibition_Customer_Visit__c.object-meta.xml
<CustomObject>
    <label>Exhibition Customer Visit</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exhibition Customer Visits</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>