force-app/main/default/objects/Exhibition_Customer_Visit__c/fields/Business_Category__c.field-meta.xml
<CustomField>
    <fullName>Business_Category__c</fullName>
    <label>Business Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>