force-app/main/default/objects/Exhibition_Customer_Visit__c/fields/Meeting_Room_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_Reservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting Room Reservation</label>
    <referenceTo>Exhibition_Meeting_Room_Reservation__c</referenceTo>
    <relationshipLabel>Exhibition Customer Visits</relationshipLabel>
    <relationshipName>Exhibition_Customer_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>