force-app/main/default/objects/Exhibition_Customer_Visit__c/fields/Visit_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Visit_Purpose__c</fullName>
    <label>Visit Purpose</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>