force-app/main/default/objects/Exhibition_Customer_Visit__c/fields/Whether_Existed_Customer__c.field-meta.xml
<CustomField>
    <fullName>Whether_Existed_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether Existed Customer</description>
    <label>Whether Existed Customer</label>
    <type>Checkbox</type>
</CustomField>