force-app/main/default/objects/Exhibition_Customer_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Category__c</columns>
    <columns>Department_Sector_Company__c</columns>
    <columns>Visit_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>